# WeekWise

./: .gitignore  CMakeLists.txt  README.md  TODO.txt  schema.sql
plugins/: BDatabase
res/: res.qrc
src/: Home.qml  Main.qml  WeekView.qml  main.cpp  main.qml  res.qrc
src/qml/: BProgressBar.qml  Calendar.qml  Controller.qml  Home.qml  Main.qml  Model.qml  PopupCalendarCell.qml  PopupCalendarLoggedHour.qml  PopupCalendarNewHour.qml  PopupCalendarPlannedHour.qml  PopupSideStats.qml  PopupSideStatsDelete.qml  PopupSideStatsNew.qml  PopupSideStatsNewGoal.qml  PopupSideStatsNewGoalDetail.qml  SideBars.qml  SideStats.qml  WeekView.qml
src/qml/ManagementView/: MacroareasList.qml  ManagementView.qml  PopupMacroareaOptions.qml
src/qml/ManagementView/macroareaList/: MacroareasList.qml  OptionElement.qml  PopupConfirm.qml  PopupInsertText.qml  PopupMacroareaOptions.qml
src/qml/WeekView/: WeekView.qml
src/qml/WeekView/calendar/: Calendar.qml  PopupLoggedHour.qml
src/qml/WeekView/sideStats/: PopupNewGoalDetail.qml  SideBars.qml  SideStats.qml
